--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Prose-of-Alfred-Lichtenstein_5663
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Lichtenstein, Alfred
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1467
     wikipedia: http://de.wikipedia.org/wiki/Alfred_Lichtenstein
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5663#The-Prose-of-Alfred-Lichtenstein
 gutenberg_issued: '2004-05-01'
 gutenberg_type: Text
 identifiers:
