--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Prose-of-Alfred-Lichtenstein_5663
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Fiction'
+- GITenberg
 title: The Prose of Alfred Lichtenstein
 url: http://www.gutenberg.org/ebooks/5663
